Added new CSS files and modified HTML files

--- a/index.html
+++ b/index.html
@@ -3,16 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY RECIPES</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/Rabdi.html">Rabdi</a></li>
-        <li><a href="recipes/Ambila.html">Ambila</a></li>
 
-    </ul>
-    
+    <header>
+        <div class="container">
+            <h1>MY RECIPES</h1>
+            <nav>
+                <ul>
+                    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                    <li><a href="recipes/Rabdi.html">Rabdi</a></li>
+                    <li><a href="recipes/Ambila.html">Ambila</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero">
+        <div class="container">
+            <div class="hero-text">
+                <h2>A site for Delicious recipes</h2>
+                <p>It provides a wide variety of delicious food recipes.To get more Recipes sign up.In the right side you get link for 3 major recipes.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">Placeholder for an image</div>
+        </div>
+    </section>
+
+    <section class="info">
+        <h3>Some random information.</h3>
+        <div class="info-boxes">
+            <div class="box">Image</div>
+            <div class="box">Image</div>
+            <div class="box">Image</div>
+            <div class="box">Image</div>
+        </div>
+    </section>
+
+    <section class="quote">
+        <blockquote>
+            "This is an inspiring quote, or a testimonial from a customer. Maybe it’s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."
+            <cite>— Thor, God of Thunder</cite>
+        </blockquote>
+    </section>
+
+    <section class="cta">
+        <div class="cta-box">
+            <div>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
+
 </body>
 </html>
