--- a/recipes/Rabdi.html
+++ b/recipes/Rabdi.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Rabdi.css">
 </head>
 <body>
     <h1>Rabdi</h1>
     <a href="../index.html">Home</a>
     <img src="https://th.bing.com/th?id=OIP.Mui3Qv8jLqulzhLoLdCEGwHaE8&w=298&h=198&c=10&rs=1&qlt=99&bgcl=fffffe&r=0&o=6&dpr=1.5&pid=23.1">
     <p>Rabdi, also called Rabri, is a classic North Indian sweet that’s rich, creamy, and perfectly sweet. To make Rabri, milk is cooked until it reduces to a thick pudding-like consistency, then is flavored with cardamoms, saffron, and your favorite nuts and dried fruits. Here you’ll find the best traditional Rabdi recipe with step-by-step instructions and photos to prepare as a delicious dessert!</p>
-    <h2>Ingridients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>Milk</li>
         <li>khoa</li>
